# h_stock_tools

./: .gitignore  Makefile  README.md  pyproject.toml  ~
config/: default.yaml
docs/: FINANCIAL_DATA.md  QUICKSTART.md  t1code.json  t2code.json  核心请求.txt
scripts/: build.py
src/: hkex_downloader_main.py
src/hkex_downloader/: __init__.py  __main__.py
src/hkex_downloader/api/: __init__.py  client.py  endpoints.py
src/hkex_downloader/cli/: __init__.py  commands.py  main.py
src/hkex_downloader/models/: __init__.py  company.py  financial.py  search.py
src/hkex_downloader/services/: __init__.py  downloader.py  financial_downloader.py  financial_service.py  searcher.py  stock_resolver.py
src/hkex_downloader/skills/: __init__.py  download.py  parsing.py  search.py
src/hkex_downloader/utils/: __init__.py  config.py  financial_formatter.py  helpers.py  logger.py
tests/: conftest.py  test_searcher.py
